# Coin-Radar

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c21a328e6a9_add_phone_no_column_for_user_table.py  ca742503fb77_add_unique_constraint_and_index_on_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: alerts.py  auth.py  watchlist.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/db/models/: alerts.py  user.py  watchlist.py
backend/app/schemas/: alerts.py  user.py  watchlist.py
backend/app/services/: alert.py
backend/app/utils/: logger.py
backend/app/worker/: coindata.py
backend/test/: test_alerts.py  test_config.py  test_example.py  test_main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/auth/: tokenContext.tsx
frontend/src/components/: CreateAlertModal.tsx  Navbar.tsx  ProtectedRoutes.tsx
frontend/src/pages/: Coins.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx  TelegramSetup.tsx
frontend/src/pages/utils/: utils.ts
